<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityWeather">


    <LinearLayout
        android:id="@+id/mapHolder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="15dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivIcon">
        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:context=".ActivityWeather"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tvTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:text="@string/main_temp"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintStart_toEndOf="@+id/ivIcon"
        app:layout_constraintTop_toTopOf="@+id/ivIcon" />

    <TextView
        android:id="@+id/tvHum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:text="@string/humidity"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/tvFeel"
        app:layout_constraintTop_toTopOf="@+id/tvTemp" />

    <TextView
        android:id="@+id/tvWind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:visibility="gone"
        android:text="@string/wind"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tvHum"
        app:layout_constraintTop_toBottomOf="@+id/tvHum" />

    <TextView
        android:id="@+id/tvMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:visibility="gone"
        android:text="@string/max_temp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tvWind"
        app:layout_constraintTop_toBottomOf="@+id/tvWind" />

    <TextView
        android:id="@+id/tvMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="4dp"
        android:text="@string/min_temp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tvMax"
        app:layout_constraintTop_toBottomOf="@+id/tvMax" />

    <TextView
        android:id="@+id/tvDes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:visibility="gone"
        android:text="@string/description"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tvCity"
        app:layout_constraintTop_toBottomOf="@+id/tvCity" />

    <TextView
        android:id="@+id/tvCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:visibility="gone"
        android:layout_marginTop="15dp"
        android:text="@string/city_name"
        android:textColor="#000000"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        android:background="#C5F4FF"
        app:layout_constraintStart_toStartOf="@+id/tvDes"
        app:layout_constraintTop_toBottomOf="@+id/tvDes"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvFeel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:text="@string/feels_like"
        android:textColor="#575757"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tvTemp"
        app:layout_constraintTop_toBottomOf="@+id/tvTemp" />

    <TextView
        android:id="@+id/tvLoad"
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>